MediaTrackControl implementation used to modify media tracks with UI controls

--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
@@ -3,8 +3,7 @@ media.redo = Redo
 media.cut = Cut
 media.delete.page = Delete current page
 media.import.recording = Import recording
-media.volume.quieter = quieter
-media.volume.louder = louder
+media.volume.adjust = Adjust volume
 media.zoom.in = Enlarge timeline
 media.zoom.out = Shrink timeline
 media.search.pages = Search pages
