--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_de_DE.properties
@@ -3,8 +3,7 @@ media.redo = Wiederherstellen
 media.cut = Ausschneiden
 media.delete.page = Aktuelle Seite entfernen
 media.import.recording = Aufzeichnung importieren
-media.volume.quieter = leiser
-media.volume.louder = lauter
+media.volume.adjust = Lautst\u00e4rke anpassen
 media.zoom.in = Zeitleiste vergr\u00f6\u00dfern
 media.zoom.out = Zeitleiste verkleinern
 media.search.pages = Durchsuche Seiten
