editor: collapse timeline selection implementation

--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_de_DE.properties
@@ -1,6 +1,7 @@
 media.undo = R\u00fcckg\u00e4ngig
 media.redo = Wiederherstellen
 media.cut = Ausschneiden
+media.collapse.selection = Auswahl reduzieren
 media.delete.page = Aktuelle Seite entfernen
 media.import.recording = Aufzeichnung importieren
 media.volume.adjust = Lautst\u00e4rke anpassen
