--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
@@ -1,6 +1,7 @@
 media.undo = Undo
 media.redo = Redo
 media.cut = Cut
+media.collapse.selection = Collapse selection
 media.delete.page = Delete current page
 media.import.recording = Import recording
 media.volume.adjust = Adjust volume
