editor: enable optional video rendering

--- a/lect-editor-fx/src/main/resources/views/video-export/video-export_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/video-export/video-export_de_DE.properties
@@ -2,5 +2,6 @@ video.export.create = Erstellen
 video.export.create.video = Video Erstellen
 video.export.save.name = Name der Aufzeichnung
 video.export.save.location = Speicherort der Aufzeichnung
+video.export.compressed.video = Video
 video.export.video.player = HTML Video Player
 video.export.vector.player = HTML Vektor Player
