--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
@@ -4,5 +4,6 @@ general.settings.font.size = Size of the controls
 general.settings.fullscreen.hide.extended = Hide the menu bar and other controls in full screen mode
 general.settings.theme = Theme
 general.settings.language = Language
+general.settings.start.fullscreen = Start in fullscreen mode
 general.settings.start.maximized = Start maximized
 general.settings.tablet.mode = Tablet mode (Windows)
