--- a/lect-presenter-fx/src/main/resources/views/about/about_en_US.properties
+++ b/lect-presenter-fx/src/main/resources/views/about/about_en_US.properties
@@ -1,6 +1,9 @@
 about.title = About
+about.info = Info
+about.info.issue = Report a problem or suggest an improvement
 about.contributors = Contributors
 about.system = System
 about.system.properties = System properties include information about the current user and the current version of the Java runtime.
 about.property = Property
 about.property.value = Value
+about.version = Version {0}
