core: introduced file context paths in Configuration and file type description translations

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -14,3 +14,7 @@ button.new = Hinzuf\u00fcgen
 button.save = Speichern
 button.browse = Durchsuchen...
 button.submit = Absenden
+
+file.description.pdf = PDF-Folien
+file.description.recording = Vorlesungsaufzeichnung
+file.description.wav = Wave Sound
