--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -14,3 +14,7 @@ button.new = Add
 button.save = Save
 button.browse = Browse...
 button.submit = Submit
+
+file.description.pdf = PDF Slides
+file.description.recording = Lecture Recording
+file.description.wav = Wave Sound
