--- a/lect-editor-fx/src/main/resources/views/general-settings/general-settings_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/general-settings/general-settings_en_US.properties
@@ -4,6 +4,8 @@ general.settings.font.size = Size of the controls
 general.settings.fullscreen.hide.extended = Hide the menu bar and other controls in full screen mode
 general.settings.theme = Theme
 general.settings.language = Language
+general.settings.language.notify.title = Display language changed
+general.settings.language.notify.message = The change will not take effect until you restart {0}.
 general.settings.notify.to.record = Display a warning message when the recording is not started
 general.settings.start.maximized = Start maximized
 general.settings.tablet.mode = Tablet mode (Windows)
