--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
@@ -4,6 +4,8 @@ general.settings.font.size = Gr\u00f6\u00dfe der Bedienelemente
 general.settings.fullscreen.hide.extended = Men\u00fcleiste und andere Bedienelemente im Vollbildmodus ausblenden
 general.settings.theme = Theme
 general.settings.language = Sprache
+general.settings.language.notify.title = Anzeigesprache ge\u00e4ndert
+general.settings.language.notify.message = Die \u00c4nderung wird erst nach einem Neustart von {0} wirksam.
 general.settings.start.fullscreen = Im Vollbildmodus starten
 general.settings.start.maximized = Maximiert starten
 general.settings.tablet.mode = Tabletmodus (Windows)
