editor: replace page feature

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -1,5 +1,6 @@
 cut.recording.error = Aufzeichnung konnte nicht geschnitten werden
 delete.page.error = Seite konnte nicht entfernt werden
+replace.page.error = Seite konnte nicht ersetzt werden
 export.audio = Audio exportieren
 export.audio.error = Audio konnte nicht exportiert werden
 import.audio.error = Audio konnte nicht importiert werden
