--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -1,5 +1,6 @@
 cut.recording.error = Recording could not be cut
 delete.page.error = Page could not be deleted
+replace.page.error = Page could not be replaced
 export.audio = Export audio
 export.audio.error = Audio could not be exported
 import.audio.error = Audio could not be imported
