editor: save document to PDF feature

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -21,6 +21,9 @@ noise.reduction.profile.error = Markiertes Zeitintervall konnte nicht als Stille
 noise.reduction.profile.min.error = Bitte im Zeitbalken einen stillen Bereich (ohne Vortrag) l\u00e4nger als {0}ms definieren
 open.recording = Aufzeichnung wird geladen
 open.recording.error = Aufzeichnung konnte nicht ge\u00f6ffnet werden
+save.document.title = Dokument wird geschrieben
+save.document.success = Dokument wurde erfolgreich geschrieben
+save.document.error = Dokument konnte nicht gespeichert werden
 save.recording = Aufzeichnung wird geschrieben
 save.recording.success = Aufzeichnung wurde erfolgreich geschrieben
 save.recording.error = Aufzeichnung konnte nicht gespeichert werden
