--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -21,6 +21,9 @@ noise.reduction.profile.error = Selected time interval could not be defined as s
 noise.reduction.profile.min.error = Please define a quiet area (without speech) with the length of at least {0}ms with the time bars
 open.recording = Recording is loading
 open.recording.error = Recording could not be opened
+save.document.title = Saving document
+save.document.success = Document has been successfully saved
+save.document.error = Document could not be saved
 save.recording = Recording is being written
 save.recording.success = Recording was successfully written
 save.recording.error = Recording could not be saved
