--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -6,6 +6,7 @@ menu.open = \u00d6ffnen
 menu.close = Schlie\u00dfen
 menu.cut = Ausschneiden
 menu.delete.page = Aktuelle Seite entfernen
+menu.save.document = Dokument abspeichern
 menu.save.as = Speichern unter...
 menu.export.audio = Audio exportieren
 menu.import.audio = Audio importieren
