--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -6,6 +6,7 @@ menu.open = Open
 menu.close = Close
 menu.cut = Cut
 menu.delete.page = Delete current page
+menu.save.document = Save document
 menu.save.as = Save As...
 menu.export.audio = Export audio
 menu.import.audio = Import audio
