core: new version notification implementation

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -14,7 +14,12 @@ button.new = Hinzuf\u00fcgen
 button.save = Speichern
 button.browse = Durchsuchen...
 button.submit = Absenden
+button.download = Herunterladen
 
 file.description.pdf = PDF-Folien
 file.description.recording = Vorlesungsaufzeichnung
 file.description.wav = Wave Sound
+
+version.new = Neue Version verf\u00fcgbar
+version.message = Neue Version: {0} ({1})\nIhre Version: {2} ({3})
+version.website = Webseite
