--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -14,7 +14,12 @@ button.new = Add
 button.save = Save
 button.browse = Browse...
 button.submit = Submit
+button.download = Download
 
 file.description.pdf = PDF Slides
 file.description.recording = Lecture Recording
 file.description.wav = Wave Sound
+
+version.new = New version available
+version.message = New version: {0} ({1})\nYour version: {2} ({3})
+version.website = Website
