Implemented version checking for the apps

--- a/lect-editor-fx/src/main/resources/views/general-settings/general-settings_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/general-settings/general-settings_de_DE.properties
@@ -6,6 +6,6 @@ general.settings.theme = Theme
 general.settings.language = Sprache
 general.settings.language.notify.title = Anzeigesprache ge\u00e4ndert
 general.settings.language.notify.message = Die \u00c4nderung wird erst nach einem Neustart von {0} wirksam.
-general.settings.notify.to.record = Warnung bei nichtgestarteter Aufnahme anzeigen
+general.settings.check.version = \u00dcberpr\u00fcfe nach neuen Versionen
 general.settings.start.maximized = Maximiert starten
 general.settings.tablet.mode = Tabletmodus (Windows)
