--- a/lect-presenter-fx/src/main/resources/views/general-settings/general-settings_de_DE.properties
+++ b/lect-presenter-fx/src/main/resources/views/general-settings/general-settings_de_DE.properties
@@ -4,6 +4,7 @@ general.settings.font.size = Gr\u00f6\u00dfe der Bedienelemente
 general.settings.fullscreen.hide.extended = Men\u00fcleiste und andere Bedienelemente im Vollbildmodus ausblenden
 general.settings.theme = Theme
 general.settings.language = Sprache
+general.settings.check.version = \u00dcberpr\u00fcfe nach neuen Versionen
 general.settings.start.fullscreen = Im Vollbildmodus starten
 general.settings.start.maximized = Maximiert starten
 general.settings.tablet.mode = Tabletmodus (Windows)
