--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_en_US.properties
@@ -6,6 +6,7 @@ general.settings.theme = Theme
 general.settings.language = Language
 general.settings.language.notify.title = Display language changed
 general.settings.language.notify.message = The change will not take effect until you restart {0}.
+general.settings.check.version = Check for new versions
 general.settings.start.fullscreen = Start in fullscreen mode
 general.settings.start.maximized = Start maximized
 general.settings.tablet.mode = Tablet mode (Windows)
