--- a/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/general-settings/general-settings_de_DE.properties
@@ -6,6 +6,7 @@ general.settings.theme = Theme
 general.settings.language = Sprache
 general.settings.language.notify.title = Anzeigesprache ge\u00e4ndert
 general.settings.language.notify.message = Die \u00c4nderung wird erst nach einem Neustart von {0} wirksam.
+general.settings.check.version = \u00dcberpr\u00fcfe nach neuen Versionen
 general.settings.start.fullscreen = Im Vollbildmodus starten
 general.settings.start.maximized = Maximiert starten
 general.settings.tablet.mode = Tabletmodus (Windows)
