--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -2,6 +2,9 @@ stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
 stream.settings.broadcast = Broadcast
+stream.settings.broadcast.profile = Profil
+stream.settings.broadcast.profile.create = Neues Profil anlegen
+stream.settings.broadcast.name = Name
 stream.settings.broadcast.address = Adresse
 stream.settings.broadcast.port = Port
 stream.settings.broadcast.port.tls = SSL/TLS Port
