--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -2,6 +2,9 @@ stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
 stream.settings.broadcast = Broadcast
+stream.settings.broadcast.profile = Profile
+stream.settings.broadcast.profile.create = Create new profile
+stream.settings.broadcast.name = Name
 stream.settings.broadcast.address = Address
 stream.settings.broadcast.port = Port
 stream.settings.broadcast.port.tls = SSL/TLS Port
