presenter: manage broadcast profiles in a table

--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -2,8 +2,8 @@ stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
 stream.settings.broadcast = Broadcast
-stream.settings.broadcast.profile = Profil
-stream.settings.broadcast.profile.create = Neues Profil anlegen
+stream.settings.broadcast.profiles = Profile
+stream.settings.broadcast.profile.delete = Profil entfernen
 stream.settings.broadcast.name = Name
 stream.settings.broadcast.address = Adresse
 stream.settings.broadcast.port = Port
