--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -2,8 +2,8 @@ stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
 stream.settings.broadcast = Broadcast
-stream.settings.broadcast.profile = Profile
-stream.settings.broadcast.profile.create = Create new profile
+stream.settings.broadcast.profiles = Profiles
+stream.settings.broadcast.profile.delete = Delete profile
 stream.settings.broadcast.name = Name
 stream.settings.broadcast.address = Address
 stream.settings.broadcast.port = Port
