presenter: add ip filter description #96

--- a/lect-presenter-swing/src/main/resources/views/network-settings/network-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/network-settings/network-settings_de_DE.properties
@@ -1,6 +1,7 @@
 network.settings.adapter = Adapter
 network.settings.adapter.name = Name
 network.settings.ip.filter = IP-Filter
+network.settings.ip.filter.description = Geben Sie die IP-Adressbereiche an, die Zugriff auf die Web-Services erhalten sollen.
 network.settings.ip.filter.delete = IP-Regel l\u00f6schen
 network.settings.ip.from = Von IP
 network.settings.ip.to = Bis IP
