--- a/lect-presenter-swing/src/main/resources/views/network-settings/network-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/network-settings/network-settings_en_US.properties
@@ -1,6 +1,7 @@
 network.settings.adapter = Adapter
 network.settings.adapter.name = Name
 network.settings.ip.filter = IP Filter
+network.settings.ip.filter.description = List the ranges of IP addresses that you want to have access to the web services.
 network.settings.ip.filter.delete = Delete IP rule
 network.settings.ip.from = From IP
 network.settings.ip.to = To IP
