presenter-api: fixed web service notifications and errors #95

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -46,6 +46,8 @@ quiz.save.result.success = Quizergebnis wurde erfolgreich gespeichert
 quiz.start.error = Quiz konnte nicht gestartet werden
 quiz.stop.error = Quiz konnte nicht gestoppt werden
 
+service.timeout.error = Der Dienst ist derzeit nicht verf\u00fcgbar. Sollte der Fehler dauerhaft auftreten, so wenden Sie sich bitte an den Administrator ihres Vertrauens.
+
 open.document.error = Dokument konnte nicht ge\u00f6ffnet werden
 open.page.file.error = Die Datei konnte nicht ge\u00f6ffnet werden
 open.page.uri.error = Der Link konnte nicht ge\u00f6ffnet werden
