broadcast: fixed error message translation #97

--- a/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/message-form/i18n/en_US.json
+++ b/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/message-form/i18n/en_US.json
@@ -1,6 +1,7 @@
 {
 	"message": {
 		"service": {
+			"absent": "Message could not be sent. Service is not available.",
 			"name": "Message"
 		},
 		"desc": "Ask a question or leave a message",
