--- a/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/quiz-form/i18n/en_US.json
+++ b/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/quiz-form/i18n/en_US.json
@@ -1,6 +1,7 @@
 {
 	"quiz": {
 		"service": {
+			"absent": "Answer could not be sent. Service is not available.",
 			"name": "Quiz"
 		},
 		"answer": {
