--- a/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/message-form/i18n/de_DE.json
+++ b/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/message-form/i18n/de_DE.json
@@ -1,6 +1,7 @@
 {
 	"message": {
 		"service": {
+			"absent": "Nachricht konnte nicht gesendet werden. Dienst ist nicht verf\u00fcgbar.",
 			"name": "Nachricht"
 		},
 		"desc": "Eine Frage oder Nachricht senden",
