--- a/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/quiz-form/i18n/de_DE.json
+++ b/lect-web-parent/lect-web-frontend/src/main/frontend/src/app/classroom/quiz-form/i18n/de_DE.json
@@ -1,6 +1,7 @@
 {
 	"quiz": {
 		"service": {
+			"absent": "Antwort konnte nicht gesendet werden. Dienst ist nicht verf\u00fcgbar.",
 			"name": "Quiz"
 		},
 		"answer": {
