Push WIP screen capture feature

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -14,6 +14,8 @@ menu.fullscreen = Vollbild
 menu.advanced.settings = Erweiterte Einstellungen
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Whiteboard erstellen
+menu.screenCapture = Aufzeichung
+menu.screenCapture.new = Bildschirmaufzeichnung erstellen
 menu.grid = Gitternetz ein/ausschalten
 menu.slide.new = Whiteboardseite erstellen
 menu.slide.delete = Whiteboardseite l\u00f6schen
