--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -14,6 +14,8 @@ menu.fullscreen = Fullscreen
 menu.advanced.settings = Advanced settings
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Create whiteboard
+menu.screenCapture = Screen Capture
+menu.screenCapture.new = Create screen capture
 menu.grid = Switch grid on/off
 menu.slide.new = Create whiteboard page
 menu.slide.delete = Delete whiteboard page
