--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_de_DE.properties
@@ -29,6 +29,9 @@ toolbar.text.select.tooltip = Textauswahlwerkzeug ausw\u00e4hlen
 toolbar.clear.tooltip = L\u00f6sche alle Texte und Linien
 toolbar.extend.tooltip = Zeichenbereich erweitern
 toolbar.whiteboard.tooltip = Whiteboard \u00f6ffnen
+toolbar.screenCapture.tooltip = Bildschirmaufzeichnung ausw\u00e4hlen
+toolbar.screenCapture.windowSelection = Fensterauswahl 
+toolbar.screenCapture.screenSelection = Bildschirmauswahl
 toolbar.displays.tooltip = Ausgabe auf externe Ausgabemedien ein/ausschalten
 toolbar.zoom.in.tooltip = Auswahl vergr\u00f6\u00dfern
 toolbar.zoom.out.tooltip = In Originalgr\u00f6\u00dfe anzeigen
