--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -29,6 +29,7 @@ toolbar.text.select.tooltip = Select text selection tool
 toolbar.clear.tooltip = Delete all annotations
 toolbar.extend.tooltip = Extend drawing area
 toolbar.whiteboard.tooltip = Open whiteboard
+toolbar.screenCapture.tooltip = Open screen capture
 toolbar.displays.tooltip = Switch output to external displays on/off
 toolbar.zoom.in.tooltip = Zoom in
 toolbar.zoom.out.tooltip = Show in original size
