editor-api: add user readable vector rendering step description

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -7,6 +7,7 @@ import.audio.error = Audio konnte nicht importiert werden
 recording.playback.error = Bei der Wiedergabe der Aufzeichnung ist ein Fehler aufgetreten
 recording.render.audio = Audio Rendering
 recording.render.video = Video Rendering
+recording.render.vector = Vector Rendering
 recording.render.video.pass = Video Rendering Pass {0}
 recording.render.canceled = Das Rendern der Aufzeichnung wurde abgebrochen
 recording.render.error = Die Aufzeichnung konnte nicht gerendert werden
