--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -7,6 +7,7 @@ import.audio.error = Audio could not be imported
 recording.playback.error = An error occurred while playing back the recording
 recording.render.audio = Audio Rendering
 recording.render.video = Video Rendering
+recording.render.vector = Vector Rendering
 recording.render.video.pass = Video Rendering Pass {0}
 recording.render.canceled = Rendering of the recording has been canceled
 recording.render.error = Recording could not be rendered
