presenter-api: add more description to the stream settings UI #94

--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -2,7 +2,7 @@ stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
 stream.settings.broadcast = Broadcast
-stream.settings.broadcast.profiles = Profile
+stream.settings.broadcast.profile.selected = Aktives Profil: \u00AB {0} \u00BB
 stream.settings.broadcast.profile.delete = Profil entfernen
 stream.settings.broadcast.name = Name
 stream.settings.broadcast.address = Adresse
