--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -2,7 +2,7 @@ stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
 stream.settings.broadcast = Broadcast
-stream.settings.broadcast.profiles = Profiles
+stream.settings.broadcast.profile.selected = Active profile: {0}
 stream.settings.broadcast.profile.delete = Delete profile
 stream.settings.broadcast.name = Name
 stream.settings.broadcast.address = Address
