--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -33,6 +33,7 @@ stream.start.error = Live-Stream konnte nicht gestartet werden
 stream.stop.error = Live-Stream konnte nicht gestoppt werden
 stream.closed.by.remote.host = Der Live-Stream wurde vom entfernten Host geschlossen
 stream.closed.by.remote.host.title = Live-Stream beendet
+stream.profile.new = Neues Profil
 
 quiz = Quiz
 quiz.answers = Antworten
