--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -33,6 +33,7 @@ stream.start.error = Live stream could not be started
 stream.stop.error = Live stream could not be stopped
 stream.closed.by.remote.host = Live stream was closed by the remote host
 stream.closed.by.remote.host.title = Live stream ended
+stream.profile.new = New Profile
 
 quiz = Quiz
 quiz.answers = Answers
