--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
@@ -8,4 +8,5 @@ settings.network = Netzwerk
 settings.recording = Aufnahme
 settings.tools = Werkzeuge
 settings.web.service = Web Service
+settings.dlz = DLZ
 settings.whiteboard = Whiteboard
