--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
@@ -9,3 +9,4 @@ settings.recording = Recording
 settings.tools = Tools
 settings.web.service = Web service
 settings.whiteboard = Whiteboard
+settings.dlz = DLZ
