--- a/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_de_DE.properties
@@ -1,5 +1,8 @@
 recording.settings.audio.format = Audioformat
+recording.settings.audio.title=Audioaufnahme
 recording.settings.directory = Aufnahmeverzeichnis
 recording.settings.notify.to.record = Warnung bei nichtgestarteter Aufnahme anzeigen
 recording.settings.confirm.stop.recording = Beenden der Aufnahme best\u00e4tigen
-recording.settings.page.record.timeout = Zeitlimit für Seitenaufzeichnung (ms)
+recording.settings.page.record.timeout=Zeitlimit f\u00fcr Seitenaufzeichnung (ms)
+recording.settings.screencapture.title=Bildschirmaufnahme
+recording.settings.screencapture.framerate=Bilder pro Sekunde
