--- a/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_en_US.properties
@@ -1,5 +1,8 @@
 recording.settings.audio.format = Audio format
+recording.settings.audio.title=Audio recording
 recording.settings.directory = Recording directory
 recording.settings.notify.to.record = Display a warning message when the recording is not started
 recording.settings.confirm.stop.recording = Confirm the end of the recording
 recording.settings.page.record.timeout = Page recording timeout (ms)
+recording.settings.screencapture.title=Screen capture
+recording.settings.screencapture.framerate=Frames per second
