--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -25,6 +25,9 @@ menu.streaming.start = Live-Stream starten
 menu.streaming.stop = Live-Stream stoppen
 menu.messenger.start = Messenger starten
 menu.messenger.stop = Messenger stoppen
+menu.dlz.start = DLZ-Chat starten
+menu.dlz.stop = DLZ-Chat stoppen
+menu.dlz.window.visible = DLZ-Chat anzeigen
 menu.messenger.window.visible = Messenger anzeigen
 menu.quiz.selection = Quiz ausw\u00e4hlen
 menu.quiz.new = Quiz erstellen
