--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -25,6 +25,9 @@ menu.streaming.start = Start live stream
 menu.streaming.stop = Stop live stream
 menu.messenger.start = Start messenger
 menu.messenger.stop = Stop messenger
+menu.dlz.start = Start DLZ-Chat
+menu.dlz.stop = Stop DLZ-Chat
+menu.dlz.window.visible = Show DLZ-Chat window
 menu.messenger.window.visible = Show messenger window
 menu.quiz.selection = Select Quiz
 menu.quiz.new = Create quiz
