Ergänzung Exception Mapper

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -5,6 +5,8 @@ bookmark.key.exists = Ein Lesezeichen mit der Taste {0} existiert bereits
 bookmark.key.not.existing = Ein Lesezeichen mit der Taste {0} existiert nicht
 bookmark.created = Neues Lesezeichen erstellt: {0}
 
+dlz.started = DLZ-Chat gestartet
+
 document.save.error = Dokument konnte nicht gespeichert werden
 document.save.lecture = Vorlesung
 
