presenter-api: added options for the streaming model

--- a/lect-presenter-fx/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-fx/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -1,3 +1,4 @@
+stream.settings.access.token = Access Token
 stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
