--- a/lect-presenter-fx/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-fx/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -1,3 +1,4 @@
+stream.settings.access.token = Zugriffstoken
 stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
