presenter: adopted to the new course streaming api

--- a/lect-presenter-fx/src/main/resources/views/webservice-settings/webservice-settings_de_DE.properties
+++ b/lect-presenter-fx/src/main/resources/views/webservice-settings/webservice-settings_de_DE.properties
@@ -1,6 +1,6 @@
 webservice.settings.display.ip.position = Position der IP Adresse auf dem Beamer
-webservice.settings.lecture.title = Vortragstitel
-webservice.settings.lecture.title.short = Kurzname
+webservice.settings.course.title = Kurstitel
+webservice.settings.course.title.short = Kurzname
 webservice.settings.quiz = Quiz
 webservice.settings.regex = Regex
 webservice.settings.regex.blocked = Ausgeblendete numerische Antworten (regul\u00e4re Ausdr\u00fccke)
