--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -6,7 +6,7 @@ bookmark.key.not.existing = Ein Lesezeichen mit der Taste {0} existiert nicht
 bookmark.created = Neues Lesezeichen erstellt: {0}
 
 document.save.error = Dokument konnte nicht gespeichert werden
-document.save.lecture = Vorlesung
+document.save.course = Kurs
 
 error = Fehler
 generic.error = Bitte kontaktieren Sie Ihren Systemadministrator. Vollst\u00e4ndige Details finden Sie im Anwendungsprotokoll.
