--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -6,7 +6,7 @@ bookmark.key.not.existing = A bookmark with the key {0} does not exist
 bookmark.created = New bookmark created: {0}
 
 document.save.error = Document could not be saved
-document.save.lecture = Lecture
+document.save.course = Course
 
 error = Error
 generic.error = Please contact your system administrator. For complete details, see the application log.
