--- a/lect-presenter-fx/src/main/resources/views/webservice-settings/webservice-settings_en_US.properties
+++ b/lect-presenter-fx/src/main/resources/views/webservice-settings/webservice-settings_en_US.properties
@@ -1,6 +1,6 @@
 webservice.settings.display.ip.position = Position of the IP address on the projector
-webservice.settings.lecture.title = Presentation title
-webservice.settings.lecture.title.short = Short name
+webservice.settings.course.title = Course title
+webservice.settings.course.title.short = Short name
 webservice.settings.quiz = Quiz
 webservice.settings.regex = Regex
 webservice.settings.regex.blocked = Hidden numeric answers (regular expressions)
