--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -1,5 +1,5 @@
 stream.settings.access.token = Access Token
-stream.settings.lecture = Lecture
+stream.settings.course = Course
 stream.settings.audio = Audio
 stream.settings.audio.codec = Codec
 stream.settings.audio.format = Format
