presenter: update courses in stream settings

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -15,6 +15,7 @@ button.save = Speichern
 button.browse = Durchsuchen...
 button.submit = Absenden
 button.download = Herunterladen
+button.update = Aktualisieren
 
 file.description.pdf = PDF-Folien
 file.description.recording = Vorlesungsaufzeichnung
