--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -15,6 +15,7 @@ button.save = Save
 button.browse = Browse...
 button.submit = Submit
 button.download = Download
+button.update = Update
 
 file.description.pdf = PDF Slides
 file.description.recording = Lecture Recording
