--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -11,4 +11,4 @@ stream.settings.broadcast.address = Adresse
 stream.settings.broadcast.port = Port
 stream.settings.broadcast.port.tls = SSL/TLS Port
 stream.settings.camera = Kamera
-stream.settings.camera.bitrate = Bitrate
+stream.settings.camera.bitrate = Bitrate in kbit/s
