--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -11,4 +11,4 @@ stream.settings.broadcast.address = Address
 stream.settings.broadcast.port = Port
 stream.settings.broadcast.port.tls = SSL/TLS Port
 stream.settings.camera = Camera
-stream.settings.camera.bitrate = Bitrate
+stream.settings.camera.bitrate = Bitrate in kbit/s
