presenter: streaming camera toggle over the app menu

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -31,6 +31,7 @@ recording.pause.error = Aufzeichnung konnte nicht pausiert werden
 stream.starting = Der Live-Stream wird gestartet
 stream.start.error = Live-Stream konnte nicht gestartet werden
 stream.stop.error = Live-Stream konnte nicht gestoppt werden
+stream.enable.camera.error = Live-Stream-Kamera konnte nicht (de)aktiviert werden
 stream.closed.by.remote.host = Der Live-Stream wurde vom entfernten Host geschlossen
 stream.closed.by.remote.host.title = Live-Stream beendet
 stream.profile.new = Neues Profil
