--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -23,6 +23,7 @@ menu.recording.start = Aufzeichnung starten
 menu.recording.stop = Aufzeichnung stoppen
 menu.streaming.start = Live-Stream starten
 menu.streaming.stop = Live-Stream stoppen
+menu.streaming.enable.camera = Kamera f\u00fcr Live-Stream ein/ausschalten
 menu.messenger.start = Messenger starten
 menu.messenger.stop = Messenger stoppen
 menu.messenger.window.visible = Messenger anzeigen
