presenter: stream microphone muting

--- a/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-toolbar/main-toolbar_en_US.properties
@@ -37,3 +37,5 @@ toolbar.recording.start.tooltip = Start recording
 toolbar.recording.stop.tooltip = Stop recording
 toolbar.recording.pause.tooltip = Pause recording
 toolbar.grid.tooltip = Switch grid on/off
+toolbar.stream.microphone.tooltip = Switch microphone on/off for live stream
+toolbar.stream.camera.tooltip = Switch camera on/off for live stream
