--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -23,6 +23,7 @@ menu.recording.start = Start recording
 menu.recording.stop = Stop recording
 menu.streaming.start = Start live stream
 menu.streaming.stop = Stop live stream
+menu.streaming.enable.microphone = Switch microphone on/off for live stream
 menu.streaming.enable.camera = Switch camera on/off for live stream
 menu.messenger.start = Start messenger
 menu.messenger.stop = Stop messenger
