--- a/lect-presenter-swing/src/main/resources/views/tool-settings/tool-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/tool-settings/tool-settings_de_DE.properties
@@ -1,4 +1,8 @@
 tool.settings.highlighter.scale = Highlighter skalieren
-tool.settings.highlighter.size = Highlightergr\u00f6\u00dfe
-tool.settings.pen.size = Stiftgr\u00f6\u00dfe
-tool.settings.pointer.size = Pointergr\u00f6\u00dfe
+tool.settings.highlighter.size = Highlightergr\u00F6\u00DFe
+tool.settings.pen.size = Stiftgr\u00F6\u00DFe
+tool.settings.pointer.size = Pointergr\u00F6\u00DFe
+tool.settings.line.size = Liniengr\u00F6\u00DFe
+tool.settings.arrow.size = Pfeilgr\u00F6\u00DFe
+tool.settings.rectangle.size = Rechteckgr\u00F6\u00DFe
+tool.settings.ellipse.size = Ellipsengr\u00F6\u00DFe
