--- a/lect-presenter-swing/src/main/resources/views/tool-settings/tool-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/tool-settings/tool-settings_en_US.properties
@@ -2,3 +2,7 @@ tool.settings.highlighter.scale = Scale highlighter
 tool.settings.highlighter.size = Highlighter size
 tool.settings.pen.size = Pen size
 tool.settings.pointer.size = Pointer size
+tool.settings.line.size = Line size
+tool.settings.arrow.size = Arrow size
+tool.settings.rectangle.size = Rectangle size
+tool.settings.ellipse.size = Ellipse size
