presenter: choose course when starting stream

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -1,5 +1,6 @@
 button.ok = OK
 button.begin = Beginnen
+button.check = Pr\u00fcfen
 button.create = Erstellen
 button.finish = Fertig
 button.cancel = Abbrechen
