Speech message implementation

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -1,3 +1,9 @@
 slides.notes = Notizen
 slides.latex = LaTeX
 slides.message = Nachricht
+
+speech.from = {0} hat sich gemeldet
+speech.accept = Annehmen
+speech.canceled = Abgebrochen
+speech.reject = Ablehnen
+speech.rejected = Abgelehnt
