--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -1,3 +1,9 @@
 slides.notes = Notes
 slides.latex = LaTeX
 slides.message = Message
+
+speech.from = {0} raised his hand
+speech.accept = Accept
+speech.canceled = Canceled
+speech.reject = Reject
+speech.rejected = Rejected
