presenter-api: improved WebRTC message routing

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -4,6 +4,7 @@ slides.message = Nachricht
 
 speech.from = {0} hat sich gemeldet
 speech.accept = Annehmen
+speech.accepted = Angenommen
 speech.canceled = Abgebrochen
 speech.reject = Ablehnen
 speech.rejected = Abgelehnt
