--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -4,6 +4,7 @@ slides.message = Message
 
 speech.from = {0} raised his hand
 speech.accept = Accept
+speech.accepted = Accepted
 speech.canceled = Canceled
 speech.reject = Reject
 speech.rejected = Rejected
