presenter: unified stream api calls

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -28,11 +28,11 @@ recording.stop.error = Aufzeichnung konnte nicht gestoppt werden
 recording.save.error = Aufzeichnung konnte nicht gespeichert werden
 recording.pause.error = Aufzeichnung konnte nicht pausiert werden
 
-stream.starting = Der Live-Stream wird gestartet
-stream.start.error = Live-Stream konnte nicht gestartet werden
-stream.stop.error = Live-Stream konnte nicht gestoppt werden
-stream.closed.by.remote.host = Der Live-Stream wurde vom entfernten Host geschlossen
-stream.closed.by.remote.host.title = Live-Stream beendet
+stream.starting = Der Stream wird gestartet
+stream.start.error = Stream konnte nicht gestartet werden
+stream.stop.error = Stream konnte nicht gestoppt werden
+stream.closed.by.remote.host = Der Stream wurde vom entfernten Host geschlossen
+stream.closed.by.remote.host.title = Stream beendet
 stream.profile.new = Neues Profil
 
 quiz = Quiz
