--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -28,11 +28,11 @@ recording.stop.error = Recording could not be stopped
 recording.save.error = Recording could not be saved
 recording.pause.error = Recording could not be paused
 
-stream.starting = Starting live stream
-stream.start.error = Live stream could not be started
-stream.stop.error = Live stream could not be stopped
-stream.closed.by.remote.host = Live stream was closed by the remote host
-stream.closed.by.remote.host.title = Live stream ended
+stream.starting = Starting stream
+stream.start.error = Stream could not be started
+stream.stop.error = Stream could not be stopped
+stream.closed.by.remote.host = Stream was closed by the remote host
+stream.closed.by.remote.host.title = Stream ended
 stream.profile.new = New Profile
 
 quiz = Quiz
