--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -21,10 +21,9 @@ menu.options = Settings
 menu.presentation = Lecture
 menu.recording.start = Start recording
 menu.recording.stop = Stop recording
-menu.streaming.start = Start live stream
-menu.streaming.stop = Stop live stream
-menu.streaming.enable.microphone = Switch microphone on/off for live stream
-menu.streaming.enable.camera = Switch camera on/off for live stream
+menu.streaming.enable = Start/stop stream
+menu.streaming.enable.microphone = Switch microphone on/off for stream
+menu.streaming.enable.camera = Switch camera on/off for stream
 menu.messenger.start = Start messenger
 menu.messenger.stop = Stop messenger
 menu.messenger.window.visible = Show messenger window
