--- a/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/start-stream/start-stream_en_US.properties
@@ -1,3 +1,4 @@
 start.stream.choose.course = Please select the course to be streamed
+start.stream.camera.enable = Enable camera
 start.stream.start = Start
 start.stream.service.error = Cannot load courses. Please check the access token in the settings.
