--- a/lect-presenter-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -20,8 +20,8 @@ menu.options = Einstellungen
 menu.presentation = Vortrag
 menu.recording.start = Aufzeichnung starten
 menu.recording.stop = Aufzeichnung stoppen
-menu.streaming.start = Live-Stream starten
-menu.streaming.stop = Live-Stream stoppen
+menu.streaming.start = Stream starten
+menu.streaming.stop = Stream stoppen
 menu.messenger.start = Messenger starten
 menu.messenger.stop = Messenger stoppen
 menu.messenger.window.visible = Messenger anzeigen
