--- a/lect-presenter-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -20,8 +20,8 @@ menu.options = Settings
 menu.presentation = Lecture
 menu.recording.start = Start recording
 menu.recording.stop = Stop recording
-menu.streaming.start = Start live stream
-menu.streaming.stop = Stop live stream
+menu.streaming.start = Start stream
+menu.streaming.stop = Stop stream
 menu.messenger.start = Start messenger
 menu.messenger.stop = Stop messenger
 menu.messenger.window.visible = Show messenger window
