--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_de_DE.properties
@@ -2,7 +2,7 @@ settings.camera = Kamera
 settings.displays = Bildschirme
 settings.general = Allgemein
 settings.grid = Gitternetz
-settings.live.stream = Live Stream
+settings.live.stream = Stream
 settings.microphone = Mikrofon
 settings.network = Netzwerk
 settings.recording = Aufnahme
