--- a/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-settings/main-settings_en_US.properties
@@ -2,7 +2,7 @@ settings.camera = Camera
 settings.displays = Displays
 settings.general = General
 settings.grid = Grid
-settings.live.stream = Live stream
+settings.live.stream = Stream
 settings.microphone = Microphone
 settings.network = Network
 settings.recording = Recording
