presenter: make use of the new generic message-view

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -2,7 +2,7 @@ slides.notes = Notizen
 slides.latex = LaTeX
 slides.message = Nachricht
 
-speech.from = {0} hat sich gemeldet
+speech.requested = hat sich gemeldet
 speech.accept = Annehmen
 speech.accepted = Angenommen
 speech.canceled = Abgebrochen
