--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -2,7 +2,7 @@ slides.notes = Notes
 slides.latex = LaTeX
 slides.message = Message
 
-speech.from = {0} raised his hand
+speech.requested = raised his hand
 speech.accept = Accept
 speech.accepted = Accepted
 speech.canceled = Canceled
